# Embedded_In_Action

./: README.md
0301_led/: .mxproject  0301_led.ioc
0301_led/Core/Src/: gpio.c  main.c
0301_led/MDK-ARM/: 0301_led.uvguix.maxin  0301_led.uvoptx  0301_led.uvprojx
0301_led/MDK-ARM/0301_led/: 0301_led.axf  0301_led.build_log.htm  0301_led.hex  0301_led.htm  0301_led.lnp  0301_led.map  0301_led_0301_led.dep  gpio.crf  gpio.d  main.crf  main.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.crf  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.crf  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.crf  stm32f1xx_hal_tim_ex.d  stm32f1xx_it.crf  (+3 more)
stm32/UART/: main.c  start.s  uart.BAT  uart.c  uart.h  uart.uvguix.maxin  uart.uvoptx  uart.uvprojx
stm32/UART/Listings/: uart.map
stm32/UART/Objects/: main.d  uart.axf  uart.build_log.htm  uart.htm  uart.lnp  uart_uart.dep
stm32/code_relocate/experiment_1/UART/: .clangd  start.s  uart+uart.cbuild.yml  uart+uart.cprj  uart.BAT  uart.uvguix.maxin  uart.uvoptx  uart.uvprojx  uart_relocate.dis  uart_uart.sct  util.h
stm32/code_relocate/experiment_1/UART/Listings/: uart.map
stm32/code_relocate/experiment_1/UART/Objects/: mystring.__i  mystring.d  uart.axf  uart.build_log.htm  uart.htm  uart.lnp  uart.sct  uart_sct.Bak  uart_uart.dep  util.d
stm32/code_relocate/experiment_1/UART/RTE/_uart/: RTE_Components.h
stm32/code_relocate/experiment_1/UART/tmp/uart/uart/: CMakeLists.txt  build.ninja  cmake_install.cmake
stm32/exception/UART/: .clangd  exception.c  exception.h  led.c  led.h  main.c  mystring.c  start.s  uart+uart.cprj  uart.BAT  uart.cbuild-idx.yml  uart.cproject.yml  uart.uvguix.maxin  uart.uvoptx  uart.uvprojx  uart_relocate.dis
stm32/exception/UART/Listings/: uart.map
stm32/exception/UART/Objects/: exception.d  led.d  main.d  start._ac  string.__i  string.d  uart.__i  uart.axf  uart.build_log.htm  uart.d  uart.htm  uart.lnp  uart_uart.dep
stm32/exception/UART/tmp/uart/uart/: CMakeCache.txt
stm32/exception/UART/tmp/uart/uart/.cache/clangd/index/: main.c.E1CDB1EA430B61C1.idx  (+2 more)
stm32/gpio_interrupt/UART/: .clangd  exception.c  exti.c  exti.h  key.c  key.h  led.c  led.h  main.c  nvic.c  nvic.h  peipheral_reg_def.h  start.s  systick.c  systick.h  uart+uart.cprj  uart.BAT  uart.cbuild-set.yml  uart.csolution.yml  uart.uvguix.maxin  uart.uvoptx  uart.uvprojx  uart_relocate.dis  util.c
stm32/gpio_interrupt/UART/Listings/: uart.map
stm32/gpio_interrupt/UART/Objects/: exception.__i  exception.d  exti.__i  exti.d  key.__i  key.d  led.__i  led.d  main.__i  main.d  nvic.__i  nvic.d  systick.__i  systick.d  uart.axf  uart.build_log.htm  uart.htm  uart.lnp  uart_uart.dep  util.__i
stm32/gpio_interrupt/UART/tmp/uart/uart/: .ninja_log
stm32/led/: blink_led.dis  blink_led.uvguix.maxin  blink_led.uvoptx  blink_led.uvprojx  main.c  start.s
stm32/led/Listings/: blink_led.map
stm32/led/Objects/: blink_led.axf  blink_led.build_log.htm  blink_led.htm  blink_led.lnp  blink_led_led.dep
stm32/led_assembly/: blink_led.dis  blink_led.uvguix.maxin  blink_led.uvoptx  blink_led.uvprojx  main.bk.c  start.s
stm32/led_assembly/Listings/: blink_led.map
stm32/led_assembly/Objects/: blink_led.axf  blink_led.build_log.htm  blink_led.htm  blink_led.lnp  blink_led_led.dep
stm32/led_key_ctrl/: led_key_ctrl.uvguix.maxin  led_key_ctrl.uvoptx  led_key_ctrl.uvprojx  main.c  start.s
stm32/led_key_ctrl/Listings/: led_key_ctrl.map
stm32/led_key_ctrl/Objects/: led_key_ctrl.axf  led_key_ctrl.build_log.htm  led_key_ctrl.htm  led_key_ctrl.lnp  led_key_ctrl_led_key_ctrl.dep
stm32/led_key_ctrl_assembly/: led_key_ctrl.uvguix.maxin  led_key_ctrl.uvoptx  led_key_ctrl.uvprojx  main.c  start.s
stm32/led_key_ctrl_assembly/Listings/: led_key_ctrl.map
stm32/led_key_ctrl_assembly/Objects/: led_key_ctrl.axf  led_key_ctrl.build_log.htm  led_key_ctrl.htm  led_key_ctrl.lnp  led_key_ctrl_led_key_ctrl.dep
(+4 files in other folders)
